# final-lambda

./: .gitignore  LICENSE  README.md  cabal.project  final-lambda.cabal  shortcut.bat  test shortcut.lnk
Client/: .dockerignore  CHANGELOG.md  Dockerfile  final-lambda.cabal
Client/app/: GraphicClient.hs  LibMessage.hs  LibServer.hs  Main.hs  Server_Chunk.hs  Server_Test.hs  TrafficTest.hs  TrafficTest2.hs  TrafficTest3.hs  Types.hs
Client/app/Quests/: DataStructures.hs  Quests.hs
Client/test/: test.hs
Server/: final-lambda.cabal
Server/app/: Helpers.hs  Main.hs  Types.hs
Server/app/DB/: DataStructures.hs  Database.hs  db_setup
Server/app/Dungeons/: API.hs  Config.hs  Gen.hs  NaiveMST.hs  Structures.hs  Transform.hs
Server/app/KI/: API.hs  Config.hs  Debug.hs  Gen.hs  KI.hs  Lenses.hs  Play.hs  Structures.hs
Server/app/Quests/: DataStructures.hs  Quests.hs
Server/app/Server/: Game.hs  LibMessage.hs  LibServer.hs  ServerMinimal.hs
app/: DataStructures.hs  Helpers.hs  LibMessage.hs  Lib_Server.hs  Main.hs  Quests.hs
app/Client/: GraphicClient.hs
app/Dungeons/: Config.hs  Gen.hs  Helpers.hs  Transform.hs
app/KI/: Config.hs  Debug.hs  KI.hs  Lenses.hs  Structures.hs
app/Server/: ServerMinimal.hs
app/Server/Dungeons/: Config.hs  Gen.hs  Helpers.hs  NaiveMST.hs  Transform.hs
app/Server/KI/: Config.hs  Debug.hs  KI.hs  Lenses.hs  Structures.hs
test/: GraphicClient.hi  GraphicClient.hs  Lib_Message.hs  Server_Minimal.hi  Server_Minimal.hs  message.hs  stack.hs  test.hs
